fix(foxy-theme-overrides): adjust padding for child product cart items for improved spacing

--- a/foxy-styles/foxy-theme-overrides.css
+++ b/foxy-styles/foxy-theme-overrides.css
@@ -199,7 +199,7 @@
 }
 
 #fc .fc-cart__item.fc-cart__item--child-product {
-  padding: 0px 25px 5px 30px;
+  padding: 0px 25px 5px 35px;
   border-top: none;
   border-bottom: none;
   border-left: none;
